fixed visual bug where alt logo border was displaing in wrong colour

--- a/src/components/logo/Logo.scss
+++ b/src/components/logo/Logo.scss
@@ -26,6 +26,10 @@ $logo-dimension: 82px;
         opacity: 1;
     }
 
+    &--alt::before {
+        border: 4px solid $color-background;
+    }
+
     &__link {
         width: $logo-dimension;
         height: $logo-dimension;
@@ -39,7 +43,6 @@ $logo-dimension: 82px;
 
         &--alt {
             color: $color-background;
-            border: 4px solid $color-background;
         }
     }
 }
